--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#00b6e3</color>
+    <color name="colorPrimaryDark">#3a8bbb</color>
+    <color name="colorAccent">#ea4c89</color>
+    <color name="red">#ff0105</color>
+    <color name="green">#00ff22</color>
+    <color name="blue">#022cff</color>
+    <color name="yellow">#ffff00</color>
+    <color name="colorDescriptionBackground">#4c000000</color>
+    <color name="white">#ffffff</color>
+
 </resources>
